gccida/g0/sge_plus_constant
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/sge_plus_constant/src/loop.c:7297:32: error: use of undeclared identifier 'machine_mode'
return gen_rtx_fmt_ee( PLUS, ( machine_mode)*( ( unsigned __int8 *)x + 2), x, c); 
                               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/sge_plus_constant/src/loop.c:7301:32: error: use of undeclared identifier 'machine_mode'
return gen_rtx_fmt_ee( PLUS, ( machine_mode)*( ( unsigned __int8 *)x + 2), x->fld[0].rtx, v3); 
                               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/sge_plus_constant/src/loop.c:7306:33: error: expected expression
v7 = sge_plus_constant( *( rtx *)&x[1], c); 
                                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/sge_plus_constant/src/loop.c:7307:32: error: use of undeclared identifier 'machine_mode'
return gen_rtx_fmt_ee( PLUS, ( machine_mode)*( ( unsigned __int8 *)x + 2), v7, rtx); 
                               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/sge_plus_constant/src/loop.c:7311:26: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v4 = (  struct rtx_def *)x[1]; 
                         ^~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/sge_plus_constant/src/loop.c:7313:32: error: use of undeclared identifier 'machine_mode'
return gen_rtx_fmt_ee( PLUS, ( machine_mode)*( ( unsigned __int8 *)x + 2), v5, v4); 
                               ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/sge_plus_constant/src/obj/loop.o] Error 1
